# my-paste-bin

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
hash-service/: CMakeLists.txt  Dockerfile  Dockerfile.flyway  Makefile  docker-compose.yml
hash-service/config/: config.yaml
hash-service/db/migration/: V1__create_schema.sql
hash-service/include/: database.hpp  hash_service.hpp
hash-service/src/: database.cpp  hash_service.cpp  main.cpp
new-note-service/: CMakeLists.txt  Dockerfile
new-note-service/config/: config.yaml
new-note-service/db/migration/: V1__create_schema.sql
new-note-service/include/: database.hpp  new_note_service.hpp  yandex_object_storage.hpp
new-note-service/src/: database.cpp  main.cpp  new_note_service.cpp  yandex_object_storage.cpp
